--- a/public/index.html
+++ b/public/index.html
@@ -757,45 +757,61 @@
                     <p>Top 10 candidatos mais votados para Deputado Estadual e Federal em cada município</p>
                 </div>
 
-                <div class="ranking-controls">
-                    <div class="control-group">
-                        <label for="ranking-eleicao">Eleição</label>
-                        <select id="ranking-eleicao">
-                            <option value="">Selecione uma eleição</option>
-                        </select>
-                    </div>
+                <div class="ranking-controls ranking-controls-grid">
+                    <!-- Linha 1: Seletores Principais -->
+                    <div class="controls-row row-1">
+                        <div class="control-group election-group">
+                            <label for="ranking-eleicao">Eleição</label>
+                            <select id="ranking-eleicao" class="form-select full-width">
+                                <option value="">Selecione uma eleição</option>
+                            </select>
+                        </div>
 
-                    <div class="control-group">
-                        <label>Visualizar por</label>
-                        <div class="toggle-group" style="display: flex; gap: 10px; align-items: center; height: 38px;">
-                            <label style="margin: 0; cursor: pointer;"><input type="radio" name="ranking-tipo"
-                                    value="municipio" checked> Município</label>
-                            <label style="margin: 0; cursor: pointer;"><input type="radio" name="ranking-tipo"
-                                    value="regional"> Regional</label>
+                        <div class="control-group mode-group">
+                            <label>Visualizar por</label>
+                            <div class="toggle-group">
+                                <label><input type="radio" name="ranking-tipo" value="municipio" checked>
+                                    Município</label>
+                                <label><input type="radio" name="ranking-tipo" value="regional"> Regional</label>
+                            </div>
                         </div>
                     </div>
 
-                    <div class="control-group" style="flex-grow: 1;">
-                        <label id="ranking-filtro-label" for="ranking-busca-municipio">Filtrar Município</label>
-                        <div class="search-container">
-                            <input type="text" id="ranking-busca-municipio"
+                    <!-- Linha 2: Filtros e Ações -->
+                    <div class="controls-row row-2">
+                        <div class="control-group filter-group">
+                            <label id="ranking-filtro-label" for="ranking-busca-municipio">Filtrar Município</label>
+
+                            <!-- Input Texto -->
+                            <input type="text" id="ranking-busca-municipio" class="form-input"
                                 placeholder="Digite para filtrar municípios na lista...">
 
-                            <select id="ranking-select-regional"
-                                style="display: none; flex-grow: 1; margin-right: 10px; padding: 0.5rem; border: 1px solid #ddd; border-radius: 4px;">
-                                <option value="">Todas as Regionais</option>
-                            </select>
+                            <!-- Multi-Select -->
+                            <div class="multi-select-wrapper" id="ranking-regional-wrapper" style="display: none;">
+                                <div class="select-box" onclick="toggleRegionalDropdown()">
+                                    <span id="regional-selected-text">Todas as Regionais</span>
+                                    <i class="fas fa-chevron-down"></i>
+                                </div>
+                                <div class="options-container" id="regional-options">
+                                    <!-- Checkboxes serão inseridos via JS -->
+                                </div>
+                            </div>
+                        </div>
 
-                            <button class="btn btn-primary" id="btn-buscar-ranking">
-                                <i class="fas fa-search"></i> Carregar Ranking
+                        <div class="actions-group">
+                            <button class="btn btn-primary btn-search" id="btn-buscar-ranking">
+                                <i class="fas fa-search"></i> Carregar
                             </button>
-                            <button class="btn btn-secondary" id="btn-toggle-layout"
-                                title="Alternar Layout de Impressão">
-                                <i class="fas fa-print"></i>
-                            </button>
-                            <button class="btn btn-success" id="btn-exportar-excel" title="Exportar para Excel">
-                                <i class="fas fa-file-excel"></i>
-                            </button>
+                            <div class="utility-buttons">
+                                <button class="btn btn-secondary btn-icon" id="btn-toggle-layout"
+                                    title="Alternar Layout de Impressão">
+                                    <i class="fas fa-print"></i>
+                                </button>
+                                <button class="btn btn-success btn-icon" id="btn-exportar-excel"
+                                    title="Exportar para Excel">
+                                    <i class="fas fa-file-excel"></i>
+                                </button>
+                            </div>
                         </div>
                     </div>
                 </div>
